# slackbot-rs

./: Cargo.toml  package-lock.json  package.json  serverless.yml
poll/: Cargo.toml
poll/src/: command.rs  interaction.rs
