[package]
name = "poll"
version = "0.1.0"
edition = "2018"

[dependencies]
http = "0.1"
log = "0.4"
simple_logger = "1.0.1"
lambda_runtime = "0.2"
# lambda_http = "0.2"
lambda_http = { git = "https://github.com/awslabs/aws-lambda-rust-runtime.git", branch = "master" }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"

[[bin]]
name = "command"
path = "src/command.rs"

[[bin]]
name = "interaction"
path = "src/interaction.rs"
